Addded github actions workflow. Changed to navikt base image